--- a/business/templates/financingProducts/tradelines.html
+++ b/business/templates/financingProducts/tradelines.html
@@ -199,7 +199,7 @@
                                     <tr>
                                         <td>{{ tradeline.company_name }}</td>
                                         <td>{{ tradeline.product }}</td>
-                                        <td>{{ tradeline.tradeline_amount }}</td>
+                                        <td>${{ tradeline.tradeline_amount }}</td>
                                         <td>{{ tradeline.company_reports_to }}</td>
                                         <td>${{ tradeline.price }}</td>
                                         <td>${{ tradeline.charge }}</td>
