--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -151,7 +151,7 @@
                             <div class="price-table">
                                 <div class="price-inside">Starter</div>
                                 <div class="price-header mb-3">
-                                    <h2 class="price-title">Forever Free Package</h2>
+                                <h2 class="price-title">{% if dynamic.is_paid %}Business Credit Information Package{% else %}Forever Free Package{% endif %}</h2>
                                     <br>
                                 </div>
                                 <div class="price-list">
@@ -173,17 +173,11 @@
                                     </ul>
                                     <br>
                                     <div class="col-md-12 mt-2">
-
-                                        {% if dynamic.sub_name != "" %}
-                                            <a href="https://www.{{ dynamic.sub_name }}.getdinerotoday.com/user/login/"
-                                               target="_blank" class="btn btn-theme btn-circle">Sign Up For Forever Free
-                                                Package</a>
-                                        {% else %}
-                                            <a href="https://www.getdinerotoday.com/user/login/" target="_blank"
-                                               class="btn btn-theme btn-circle">Sign Up For Forever Free
-                                                Package</a>
-                                        {% endif %}
-
+                                        <a href="{% url "user:signup" %}" target="_blank"
+                                           class="btn btn-theme btn-circle">
+                                            {% if dynamic.is_paid %}${{ dynamic.portal_price }} One Time Payment
+                                                Option{% else %}
+                                                Sign Up For Forever Free Package{% endif %}</a>
                                     </div>
                                 </div>
                             </div>
