--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -275,7 +275,7 @@
                                 0% Business Credit Card
                                 Strategy </a>
                         </li>
-                    {% if is_main_site %}
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money
                                 Referring Friends! </a>
