--- a/business/templates/applyForLoan.html
+++ b/business/templates/applyForLoan.html
@@ -10,7 +10,7 @@
     </div>
     <section class="main-content">
         <div class="row">
-            {% if is_main_site %}
+            {% if dynamic.is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/CGVRiGp3xAQ" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
