--- a/business/templates/cooperateCredit/revolving.html
+++ b/business/templates/cooperateCredit/revolving.html
@@ -26,7 +26,7 @@
     <section class="main-content">
 
         <div class="row">
-            {% if is_main_site %}
+            {% if dynamic.is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/WXGBi4hlFc4" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
