--- a/business/templates/financingProducts/shortTermLoans.html
+++ b/business/templates/financingProducts/shortTermLoans.html
@@ -26,7 +26,7 @@
 
     <section class="main-content">
         <div class="row">
-            {% if is_main_site %}
+            {% if dynamic.is_main_site %}
             <div class="col-md-12">
                 <iframe width="100%" height="515" src="https://www.youtube.com/embed/OVF9mk5BO_M" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
