--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -50,7 +50,7 @@
             </div>
             <div class="container">
                 <div class="row text-center">
-                    {% if is_main_site %}
+                    {% if dynamic.is_main_site %}
                         <div class="col-lg-6 col-md-6 ml-auto mr-auto">
                             <div class="section-title">
                                 <div class="title-effect">
