--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            {% if is_main_site %}
+            {% if dynamic.is_main_site %}
             <div class="col-md-6">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/_EwOUUkg7hA" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -48,7 +48,7 @@
         <br><br><br>
         <div class="row mb-5">
             {% for portal in available_portals %}
-                {% if portal.code == 'affiliate_partner' and not is_main_site %}
+                {% if portal.code == 'affiliate_partner' and not dynamic.is_main_site %}
                 {% else %}
                 <div class="col-md-3 col-sm-6">
                     <div class="card mb-4 shadow-sm">
