--- a/getdinerotoday/templates/landingpages/components/Header.html
+++ b/getdinerotoday/templates/landingpages/components/Header.html
@@ -112,7 +112,7 @@
                                 </li>
                                 <li class="nav-item"><a class="nav-link" class="nav-link" href="/services">Services</a>
                                 </li>
-                                {% if dynamic.is_main_site %}
+                                {% if dynamic.is_main_site and dynamic.show_index_white_label %}
                                     <li class="nav-item"><a class="nav-link" href="/whitelabel">White Label Program</a>
                                     </li>
                                 {% endif %}
