--- a/getdinerotoday/templates/layout/BaseLayout.html
+++ b/getdinerotoday/templates/layout/BaseLayout.html
@@ -2,7 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Get Dinero Today</title>
+    <title>
+        {% if dynamic.is_main_site %}
+            {{ dynamic.title }}
+        {% else %}
+            Get Dinero Today
+        {% endif %}
+    </title>
     {% include "components/StylesBlock.html" %}
     {% block extrastyle %}
     {% endblock extrastyle %}
