--- a/getdinerotoday/templates/landingpages/whitelabel.html
+++ b/getdinerotoday/templates/landingpages/whitelabel.html
@@ -43,7 +43,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-12">
                         <div class="video-btn video-btn-pos">
-                            <a class="play-btn popup-youtube" href="https://www.youtube.com/watch?v=87lWRIttCv0"><i
+                            <a class="play-btn popup-youtube" href="{{ dynamic.whitelabel_index_video }}"><i
                                     class="la la-play"></i>
                             </a>
                             <div class="spinner-eff">
