--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -21,7 +21,7 @@
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
             <h2>Make Extra Money With Our White Label Partner Program</h2>
-            </ol></div>
+            </div>
     </div>
 
     <section class="main-content">
