--- a/business/templates/external_credentials.html
+++ b/business/templates/external_credentials.html
@@ -33,19 +33,24 @@
                                 <tr>
                                     <th>Name</th>
                                     <th>Link</th>
+
                                     <th>Login</th>
                                     <th>Password</th>
                                     <th>Comment</th>
+                                    <th>Go to app</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 {% for cred in creds %}
                                     <tr>
                                         <td>{{ cred.name }}</td>
-                                        <td><a href="{{ cred.url }}">{{ cred.url }}</a> </td>
+                                        <td><a href="{{ cred.url }}" target="_blank">{{ cred.url }}</a></td>
                                         <td>{{ cred.login }}</td>
                                         <td>{{ cred.password }}</td>
                                         <td>{{ cred.comment }}</td>
+                                        <td><a href="{{ cred.url }}" target="_blank" class="btn btn-primary">Go to
+                                            app</a></td>
+
                                     </tr>
                                 {% endfor %}
                                 </tbody>
