--- a/business/templates/external_credentials.html
+++ b/business/templates/external_credentials.html
@@ -37,7 +37,7 @@
                                     <th>Login</th>
                                     <th>Password</th>
                                     <th>Comment</th>
-                                    <th>Go to app</th>
+                                    <th>Go to Software</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -49,7 +49,7 @@
                                         <td>{{ cred.password }}</td>
                                         <td>{{ cred.comment }}</td>
                                         <td><a href="{{ cred.url }}" target="_blank" class="btn btn-primary">Go to
-                                            app</a></td>
+                                            Software</a></td>
 
                                     </tr>
                                 {% endfor %}
